added instruction text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="src/main.js"></script>
 </head>
 <body>
-    
+    <div id="game-canvas"></div>
+    <div id="instructions"></div>
 </body>
 </html>
